@@ -1,3 +1,11 @@
+2005-06-07  Aldy Hernandez  <aldyh@redhat.com>
+	    Michael Snyder  <msnyder@redhat.com>
+	    Stan Cox  <scox@redhat.com>
+
+	* common.h (EM_MS1): Define.
+
+	* ms1.h: New file.
+
 2005-05-31  Richard Henderson  <rth@redhat.com>
 
 	* alpha.h (LITUSE_ALPHA_JSRDIRECT): New.
